--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "babel-runtime": "^6.26.0",
     "bignumber.js": "^9.0.0",
     "require-from-url": "^3.1.3",
+    "slspress": "^2.2.5",
     "source-map-support": "^0.5.19",
     "web3": "^1.3.4"
   },
@@ -15,6 +16,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
+    "serverless-offline": "^6.9.0",
     "serverless-webpack": "^5.3.5",
     "webpack": "^4.40.2",
     "webpack-node-externals": "^1.7.2"
